other/restrict-secrets-by-label/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
      env:
      - name: ENV_SECRET
        valueFrom:
          secretKeyRef:
            name: bottom-secret
            key: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  initContainers:
    - name: busybox-init
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: busybox02-init
      image: ghcr.io/kyverno/test-busybox:1.35
      env:
      - name: ENV_FOO
        value: "bar"
      - name: ENV_SECRET
        valueFrom:
          secretKeyRef:
            name: bottom-secret
            key: foo
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
      env:
      - name: ENV_SECRET
        valueFrom:
          secretKeyRef:
            name: bottom-secret
            key: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  initContainers:
    - name: busybox-init
      image: ghcr.io/kyverno/test-busybox:1.35
      envFrom:
      - secretRef:
          name: bottom-secret
    - name: busybox02-init
      image: ghcr.io/kyverno/test-busybox:1.35
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
      envFrom:
      - secretRef:
          name: bottom-secret
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
      env:
      - name: ENV_SECRET
        valueFrom:
          secretKeyRef:
            name: bottom-secret
            key: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
  volumes:
    - name: secret-volume
      secret:
        secretName: bottom-secret
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
    - name: busybox-init
      image: ghcr.io/kyverno/test-busybox:1.35
      envFrom:
      - secretRef:
          name: not-secret
    - name: busybox02-init
      image: ghcr.io/kyverno/test-busybox:1.35
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
      envFrom:
      - secretRef:
          name: not-so-secret
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
      env:
      - name: ENV_SECRET
        valueFrom:
          secretKeyRef:
            name: bottom-secret
            key: foo
