other/restrict-secrets-by-label/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
        - name: busybox-init
          image: ghcr.io/kyverno/test-busybox:1.35
          envFrom:
          - secretRef:
              name: not-secret
        - name: busybox02-init
          image: ghcr.io/kyverno/test-busybox:1.35
      containers:
        - name: busybox
          image: ghcr.io/kyverno/test-busybox:1.35
          envFrom:
          - secretRef:
              name: not-so-secret
        - name: busybox02
          image: ghcr.io/kyverno/test-busybox:1.35
          env:
          - name: ENV_SECRET
            valueFrom:
              secretKeyRef:
                name: bottom-secret
                key: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.35
      volumes:
      - name: secret-volume
        secret:
          secretName: bottom-secret
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
            - name: busybox-init
              image: ghcr.io/kyverno/test-busybox:1.35
              envFrom:
              - secretRef:
                  name: not-secret
            - name: busybox02-init
              image: ghcr.io/kyverno/test-busybox:1.35
          containers:
            - name: busybox
              image: ghcr.io/kyverno/test-busybox:1.35
              envFrom:
              - secretRef:
                  name: not-so-secret
            - name: busybox02
              image: ghcr.io/kyverno/test-busybox:1.35
              env:
              - name: ENV_SECRET
                valueFrom:
                  secretKeyRef:
                    name: bottom-secret
                    key: foo
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: busybox02
            image: ghcr.io/kyverno/test-busybox:1.35
          volumes:
          - name: empty-volume
            emptyDir: {}
          - name: secret-volume
            secret:
              secretName: bottom-secret
          restartPolicy: OnFailure
